appsIngress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apps-ingress
  namespace: ingress-nginx
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: amazon.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: naveeningress
            port:
              number: 80

  - host: ebay.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prabhakaringress
            port:
              number: 80
              
  - host: mykibana.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kibanarelease-kibana
            port:
              number: 5601          
              
  - host: gumtree.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: harshithhelmingress
            port:
              number: 80
              
  - host: myprom.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prometheusrelease-server
            port:
              number: 80  
  - host: mygrafana.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana
            port:
              number: 80              
  - host: mymongoexpress.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: navmongoexpsvc
            port:
              number: 8081
